Game_ex color changes

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     <section id="game_ex">
         <br><br><br><br><br>
         <h1 id="game_ex_h1" class="hide">Explore, plunder, collect!</h1>
-        <p id="geTp" class="hide">UNLEASH your Inner Pirate and explore the 7 seas, battling foes</p>
-        <p class="hide">and collecting treasure along the way!!!</p>
+        <p id="geTp" class="hide">UNLEASH your Inner Pirate and explore the 7 seas.</p>
+        <p id="geBt" class="hide"> Battle foes and collect treasure along the way!</p>
     
     <!-- <img src="Optimized-Images/Sail_edited_noBack4.png" height = "150" width = "330" alt="Screeshot displaying some ingame elements" id="display1"> -->
 
@@ -117,20 +117,20 @@
     </section>
     <!--What's Next-->
     <section id="whats_next">
-        <div id="whats_next_title" class="hide">
+        <div id="whats_next_title">
             <h1 id="whats_next_Next">Upcoming</h1>
 
             <ul id="whats_next_content">
                 <li>Multiplayer</li>
                 <li>Something else!</li>
             </ul>
-            <img src='unOptimized-Images/glove_concept.jpg' alt='something!' id="whats_next_img">
+            <img src='unOptimized-Images/glove_concept.jpg' alt='glove concept art' id="whats_next_img">
 
         </div>
         
-        <div id="wnFillerImg" class="hide">
+        <div id="wnFillerImg">
             <h1>Updates Constantly!</h1>
-            <img src="unOptimized-Images/Spyglass.jpg" alt="Spyglasses">
+            <img src="unOptimized-Images/Fishing-pole-concept.jpg" alt="Fishing pole concept">
         </div>
 
         <div id="NiMain-container" class="hide">
@@ -139,7 +139,7 @@
                 <h2>Multiplayer<span>!</span></h2>
                 <p>The most anticipated feature of Sail VR!</p>
                 <p>Currently in development!</p>
-                <img src="Optimized-Images/Sail_edited_noBack4.png" alt="image">
+                <img src="Optimized-Images/Sail_edited_noBack4.png" alt="Sail VR screenshot">
                 <div id="secret_ducky"><img src="unOptimized-Images/rubber ducky.png" alt="Shhhhh Rubber Ducky" id='duckimg' onclick="secretDuckMove()"><h4 id="duckH4">shhhhhh try to find</h4><h3 id="duckH3">me in-game</h3><h4 id="duck_hiddenText">You'll Never Catch Me!!!</h4></div>
             </div>
         </div>
